# YunYunEditorDesktop

./: .gitignore  BuildYunYunEditorExe.bat  LaunchYunYunEditor.bat  README.md
Example/: example.denpa
python_editor/: README.md  pyproject.toml  run_yunyun_editor.py  yunyun_editor.spec
python_editor/src/yunyun_editor/: __init__.py  app.py  audio.py  audio_convert.py  drafts.py  editor_state.py  history.py  io.py  model.py  renderer_math.py  settings.py  tempo_detect.py  timing.py  waveform.py
python_editor/tests/: test_audio.py  test_audio_convert.py  test_drafts.py  test_editor_ops.py  test_history.py  test_io_roundtrip.py  test_renderer_math.py  test_timing.py  test_waveform.py
